2001-07-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: A little more work to get indent vs gindent to
	  be detected correctly

2001-07-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Now searching for gindent as well as indent

	* configure.in: Make sure configure scripts work with autoconf-2.50
	  (had to fix cygwin check), they do not yet work with 2.50

2001-06-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/struct.h: Added rc variable and reformated the code
	
2001-06-21 Stefan Petersen  <spe@geda.seul.org>

	* noweb/g_basic.nw: Improved error information when reading *rc
	  and other minor clean ups.

	* include/prototype.h: Removed ORIG_g_read_file
	
2001-06-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/Makefile.am: Further improvements on the noweb build mechansim

	* src/Makefile.am: Added the ability to build the docs

	* docs/Makefile.am: Added makefile
	
	* noweb/Makefile.am: Added makefile

	* scripts/Makefile.am: Added makefile

2001-06-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Minor cleanup

	* src/Makefile.am: Added support for automatic dependency tracking
	  wrt the noweb files (using VPATH)
	  
	* noweb/libgeda.c: Changed the init code so that you do not have
	  to have the GEDADATADIR variable set, but if it is, override 
	  the default
	
2001-06-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/libgeda.c: Added an init function for the library which is
	  responsible for make sure the require environment variable is set

	* noweb/Makefile: Added above file 

	* src/Makefile.am: Added above file

2001-06-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/Makefile: misc path changes

	* scripts/geda_totexi: renamed gawk to just plain awk
	
2001-06-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/*: Added all the .nw files that were done by Patrick B.

	* Started the slow switch to noweb (almost there, just have to 
	  get the configure mechanism setup)
	  