@@ -282,6 +282,10 @@ using gschem just like drawing a schematic sheet.  <p>
 	     the end which will have nets connected to it) (Yes this is
 	     line a duplicate.  I can't stress this point enough </LI>
 <p>
+	<LI> Remember that pins are special objects; if you want to add
+	     a pin, make sure it is a pin and not a line or net.  Use
+	     the Add/Pin command to place a pin.
+<p>
 
 	<LI> Don't include nets inside symbols.  That isn't implemented and
              doesn't make much sense anyway. </LI>
