@@ -7,7 +7,7 @@ PACKAGE=libgeda
 DATADIR=gEDA
 
 # new way of doing version
-VERSION=20010304
+VERSION=20010708
 
 echo Configuring libgeda version $VERSION
 
